004-kubernetes/20-apps-basic-ressources.yml
# # # # # # # # # # # # # # # # # # # # # # # # # #
#
# Content: basis for further apps
# Author: Jan Jambor, XWare GmbH
# Author URI: https://xwr.ch
# Date: 02.01.2021
#
# - before running this, check:
#   - Line 38 / 39: azurestorageaccountname & azurestorageaccountkey
#
# # # # # # # # # # # # # # # # # # # # # # # # # #

# # # # # # # # # # # # # # #
# Namespace
# kubectl config set-context --current --namespace=ns-apps
apiVersion: v1
kind: Namespace
metadata:
  name: ns-apps
---
# # # # # # # # # # # # # # # # # # # # # # # # # #
# Middleware
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mw-headers
  namespace: ns-apps
spec:
  headers:
    sslRedirect: true
    sslProxyHeaders:
      X-Forwarded-Proto: "https"
