004-kubernetes/01-busybox.yml
# # # # # # # # # # # # # # #
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
  namespace: ns-admin
  labels:
    environment: test
    owner: jan.jambor-at-xwr.ch
    applicationname: busybox
    costcenter: jj
    dr: essential
spec:
  replicas: 1
  selector:
    matchLabels:
      applicationname: busybox
  template:
    metadata:
      labels:
        environment: test
        owner: jan.jambor-at-xwr.ch
        applicationname: busybox
        costcenter: jj
        dr: essential
    spec:
      containers:
      - name: busybox
        image: debian:10.3-slim
        command: ["/bin/sh", "-ec", "sleep 1000"]
        volumeMounts:
        - name: data-storage
          mountPath: /opt/mariadb
          subPath: mariadb
      volumes:
      - name: data-storage
        azureFile:
          secretName: sec-azure-file-mariadb
          shareName: shstk8sdatabasekstjj001
          readOnly: false
