004-kubernetes/10-portainer-kubernetes.yaml
# # # # # # # # # # # # # # #
# Deployment
# Instant update: kubectl set image deployments/portainer portainer=portainer/portainer-k8s-beta:linux-amd64 -n ns-admin
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: ns-admin
spec:
  selector:
    matchLabels:
      app: app-portainer
  template:
    metadata:
      labels:
        app: app-portainer
    spec:
      serviceAccountName: portainer-sa-clusteradmin
      containers:
      - name: portainer
        image: portainer/portainer-k8s-beta:linux-amd64
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
          protocol: TCP
        volumeMounts:
        - name: admin-configs
          mountPath: /data
          subPath: portainer
        resources:
          # requests:
          #   cpu: 100m
          #   memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
      volumes:
      - name: admin-configs
        azureFile:
          secretName: sec-azure-file
          shareName: shstk8skstjj001
          readOnly: false
---
# # # # # # # # # # # # # # #
# Service
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: ns-admin
spec:
  type: ClusterIP #NodePort
  selector:
    app: app-portainer
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
      # nodePort: 30777
---
# # # # # # # # # # # # # # # # # # # # # # # # # #
# portainer dashboard
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ir-portainer
  namespace: ns-admin
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`portainer.at.your.domain`) # && PathPrefix(`/`)
    kind: Rule
    services:
    - name: portainer
      namespace: ns-admin
      port: 9000
  tls:
    certResolver: myresolver
