004-kubernetes/13-mysql-kubernetes.yml
# # # # # # # # # # # # # # # # # # # # # # # # # #
#
# Content: mysql cluster on kubernetes
# Author: Jan Jambor, XWare GmbH
# Author URI: https://xwr.ch
# Date: 31.12.2020
#
# Important: 
# - this requires mysql 5.7 and needs bigger changes if a newer version or mariadb is wanted
# - before running this, check:
#   - Line 345: your public IP
#   - Line 365: domain of your choice
# 
# Ressources: 
# - based on: Running Highly Available WordPress with MySQL on Kubernetes https://rancher.com/running-highly-available-wordpress-mysql-kubernetes
# - Kubernetes Volume Access Modes: https://kubernetes.io/docs/concepts/storage/persistent-volumes/#access-modes
# 
# TODO
# - should the password really be empty?
#   - temp solution:
#     - lock down root as much as possible (no connection from outside)
#     - create a proper user with password for daily work
# - move to mariadb: https://mariadb.com/kb/en/percona-xtrabackup-overview/
#
# # # # # # # # # # # # # # # # # # # # # # # # # #

# # # # # # # # # # # # # # #
# Namespace
# kubectl config set-context --current --namespace=ns-database
apiVersion: v1
kind: Namespace
metadata:
  name: ns-database
---
# # # # # # # # # # # # # # #
# StatefulSet mysql
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: ns-database
  labels:
    environment: test
    owner: jan.jambor-at-xwr.ch
    applicationname: mysql
    costcenter: jj
    dr: essential
    io.portainer.kubernetes.application.stack: mysql
spec:
  selector:
    matchLabels:
      applicationname: mysql
  serviceName: mysql
  replicas: 3
  template:
    metadata:
      labels:
        environment: test
        owner: jan.jambor-at-xwr.ch
        applicationname: mysql
        costcenter: jj
        dr: essential
    spec:
      containers:
      - name: mysql
        image: mysql:5.7.32
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        - name: config-map
          mountPath: /mnt/config-map
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            # Check we can execute queries over TCP (skip-networking is off).
            command: ["mysql", "-h", "127.0.0.1", "-e", "SELECT 1"]
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
      - name: xtrabackup
        image: gcr.io/google-samples/xtrabackup:1.0
        ports:
        - name: xtrabackup
          containerPort: 3307
        command:
        - bash
        - "-c"
        - |
          [...]
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
      volumes:
      - name: conf
        emptyDir: {}
      - name: config-map
        configMap:
          name: mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
# # # # # # # # # # # # # # #
# Service mysql
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ns-database
  labels:
    environment: test
    owner: jan.jambor-at-xwr.ch
    applicationname: mysql
    costcenter: jj
    dr: essential
    io.portainer.kubernetes.application.stack: mysql
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: mysql
    port: 3306
  selector:
    applicationname: mysql
---
# # # # # # # # # # # # # # #
# Deployment adminer
kind: Deployment
apiVersion: apps/v1
metadata:
  name: adminer
  namespace: ns-database
  labels:
    environment: test
    owner: jan.jambor-at-xwr.ch
    applicationname: adminer
    costcenter: jj
    dr: essential
    io.portainer.kubernetes.application.stack: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      applicationname: adminer
  template:
    metadata:
      labels:
        applicationname: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:4.7.6
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
---
# # # # # # # # # # # # # # #
# Service adminer
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: ns-database
  labels:
    environment: test
    owner: jan.jambor-at-xwr.ch
    applicationname: adminer
    costcenter: jj
    dr: essential
    io.portainer.kubernetes.application.stack: mysql
spec:
  type: ClusterIP #NodePort
  selector:
    applicationname: adminer
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
# # # # # # # # # # # # # # #
# Middleware adminer
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ipwl-onlylocalip
  namespace: ns-database
  labels:
    environment: test
    owner: jan.jambor-at-xwr.ch
    applicationname: adminer
    costcenter: jj
    dr: essential
spec:
  ipWhiteList:
    sourceRange:
      - 1.2.3.4/32 # your public IP to limit access to only that ip
      - 127.0.0.1/32
---
# # # # # # # # # # # # # # # # # # # # # # # # # #
# Ingress Route adminer
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ir-traefik
  namespace: ns-database
  labels:
    environment: test
    owner: jan.jambor-at-xwr.ch
    applicationname: adminer
    costcenter: jj
    dr: essential
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`your.sub.domain.org`) # || Host(`1.2.3.4`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    services:
    - name: adminer
      namespace: ns-database
      port: 8080
  tls:
    certResolver: myresolver
