004-kubernetes/22-snipeit-kubernetes.yml
# # # # # # # # # # # # # # #
# Deployment
# echo -n 'APP_KEY' | base64
kind: Deployment
apiVersion: apps/v1
metadata:
  name: snipeit
  namespace: ns-apps
  labels:
    environment: test
    owner: jan.jambor-at-xwr.ch
    applicationname: snipeit
    costcenter: jj
    dr: essential
    io.portainer.kubernetes.application.stack: snipeit
spec:
  replicas: 1
  selector:
    matchLabels:
      applicationname: snipeit
  template:
    metadata:
      labels:
        applicationname: snipeit
    spec:
      containers:
        - name: snipeit
          image: snipe/snipe-it:v5.0.11
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: apps-files
            mountPath: /var/lib/snipeit
            subPath: snipeit
          - name: kv-k8s-apps-vault
            mountPath: "/mnt/secrets-store"
            readOnly: true
          ports:
            - name: web
              containerPort: 80
      volumes:
      - name: apps-files
        azureFile:
          secretName: sec-apps-files
          shareName: shstk8sappskstjj001
          readOnly: false
      - name: kv-k8s-apps-vault
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "kv-k8s-apps-vault"
          nodePublishSecretRef:                     # Only required when using service principal mode
            name: kv-k8s-apps-vault-store-creds     # Only required when using service principal mode
---
# # # # # # # # # # # # # # #
# Service snipeit
apiVersion: v1
kind: Service
metadata:
  name: snipeit
  namespace: ns-apps
  labels:
    environment: test
    owner: jan.jambor-at-xwr.ch
    applicationname: snipeit
    costcenter: jj
    dr: essential
    io.portainer.kubernetes.application.stack: mysql
spec:
  type: ClusterIP #NodePort
  selector:
    applicationname: snipeit
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
# # # # # # # # # # # # # # # # # # # # # # # # # #
# Ingress Route snipeit
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ir-traefik
  namespace: ns-apps
  labels:
    environment: test
    owner: jan.jambor-at-xwr.ch
    applicationname: snipeit
    costcenter: jj
    dr: essential
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`your.sub.domain.org`) # || Host(`1.2.3.4`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    services:
    - name: snipeit
      namespace: ns-apps
      port: 80
    middlewares:
    - name: mw-headers
  tls:
    certResolver: myresolver
